update-manager (1:0.57.4) feisty; urgency=low

  * DistUpgrade/DistUpgradeControler.py:
    - workaround problem in python-apt (no support for PyLong in SizeToStr)
      LP#84019

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 22 Feb 2007 16:09:18 +0100

update-manager (0.57.3) feisty; urgency=low

  * debian/rules:
    - build a raw-dist-upgrader in additon to the debs
  * data/glade/UpdateManager.glade:
    - fix bad grammar (thanks to Matthew Thomas) LP#85258
    - make Update Manager the consistent name (thanks to Matthew Thomas) 
      LP#85253
  * merged ReleaseAnnouncement wording update from Brian Murray
  * UpdateManager/Core/MetaRelease.py:
    - fix missing import (LP#85515)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 22 Feb 2007 16:09:10 +0100

update-manager (0.57.2) feisty; urgency=low

  * fix crash in upgrade mode (LP#84915)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Feb 2007 18:41:17 +0100

update-manager (0.57.1) feisty; urgency=low

  * fix proxy authentication parser (lp: #83563)
  * fix crash in check_all_updates_installable() (LP#84776)
  * fix exception when strange permissions are set on meta-release
    file (LP#84724)
  * fix error dialog if cache init fails (LP#83185)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Feb 2007 13:27:09 +0100

update-manager (0.57) feisty; urgency=low

  * added clickable CVE and buglinks

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu,  8 Feb 2007 12:11:04 +0100

update-manager (0.56.1) feisty; urgency=low

  * fix FTBFS 
  * update po/

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed,  7 Feb 2007 21:18:39 +0100

update-manager (0.56) feisty; urgency=low

  * added --proposed switch to fetch a release-upgrader from a different
    location (similar to the -proposed pocket in the archive)
  * split into update-manager and update-manager-core and support
    cli release upgrades with the later
  * added fdsend module to support file descriptor passing over sockets