@@ -3,6 +3,10 @@ update-manager (1:0.57.4) feisty; urgency=low
   * DistUpgrade/DistUpgradeControler.py:
     - workaround problem in python-apt (no support for PyLong in SizeToStr)
       LP#84019
+  * DistUpgrade/DistUpgradeViewGtk.py:
+    - keep a reference of the svg pibbuf loader around (LP#86699)
+  * UpdateManager/fakegconf.py:
+    - fix crash on xubuntu when gconf is not available (LP#86673)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 22 Feb 2007 16:09:18 +0100
 
